[package]
name = "lobtui"
version = "0.3.0"
authors = ["Badr Badri <contact@pythops.com>"]
license = "GPL-3.0"
description = "TUI for lobste.rs website"
edition = "2021"
readme = "Readme.md"
homepage = "https://github.com/pythops/lobtui"
repository = "https://github.com/pythops/lobtui"

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.28"
tokio = { version = "1", features = ["full"] }
scraper = "0.20"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }

open = "5"
color-eyre = "0.6"
clap = { version = "4", features = ["derive", "cargo"] }

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
